Optimize MongoDB queries with explicit indexes. Created indexes for orders and product_configs collections, implemented a more efficient two-step query approach that reduced query time from 13+ seconds to ~1 second.